Hero-section main

--- a/src/index.html
+++ b/src/index.html
@@ -33,15 +33,23 @@
         </ul>
       </nav>
    </header>
+
+   <!--Hero section-->
+   <div class="flex justify-center items-center flex-col">
+      <img src="../src/images/illustration-intro.png" alt="" height="400" width="400">
+      <h2 class="text-white mb-4">All your files in one secure location, accessible anywhere.</h2>
+      <p class="text-white self-center">Fylo stores all your most important files in one secure location.</p>
+      <p class="text-white self-center mb-4"> Access them wherever you need, share and collaborate with friends family, and co-workers.</p> 
+      <button type="submit" class="bg-cyan-500 px-8 py-2 rounded-lg">Get Started</button> 
+    </div>
   
   <!--
 
-  All your files in one secure location, accessible anywhere.
+  
 
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
+ 
 
-  Get Started
+ 
 
   Access your files, anywhere
 
