Feature section done and styled

--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,46 @@
    </header>
 
    <!--Hero section-->
-   <div class="flex justify-center items-center flex-col">
+   <div class="flex justify-center items-center flex-col mb-8">
       <img src="../src/images/illustration-intro.png" alt="" height="400" width="400">
       <h2 class="text-white mb-4">All your files in one secure location, accessible anywhere.</h2>
       <p class="text-white self-center">Fylo stores all your most important files in one secure location.</p>
       <p class="text-white self-center mb-4"> Access them wherever you need, share and collaborate with friends family, and co-workers.</p> 
       <button type="submit" class="bg-cyan-500 px-8 py-2 rounded-lg">Get Started</button> 
     </div>
+
+
+    <!-- Features section -->
+    <div class="mx-32 grid grid-cols-2 gap-8">
+      <div class="flex justify-center items-center flex-col">
+        <img src="./images/icon-access-anywhere.svg" alt="access-your-file-icon" class="max-w-full w-auto">
+        <h2 class="text-white text-lg mb-2">Access your files , anywhere</h2>
+        <p class="text-white text-xs text-center">The ability to use a smartphone, tablet, or computer <br> to access your account means your
+        files follow you <br> everywhere.</p>
+      </div>
+
+      <div  class="flex justify-center items-center flex-col">
+        <img src="./images/icon-security.svg" alt="security" class="max-w-full w-auto">
+        <h2  class="text-white text-lg mb-2">Security you can trust</h2>
+        <p class="text-white text-center text-xs">2-factor authentication and user-controlled encryption are  <br>just a couple of the security
+        features we allow to help  <br>secure your files.</p>
+      </div>
+
+      <div  class="flex justify-center items-center flex-col">
+        <img src="./images/icon-collaboration.svg" alt="real-time-collaboration" class="max-w-full w-auto">
+        <h2  class="text-white text-lg mb-2">Real-time collaboration</h2>
+        <p class="text-white text-center text-xs">Securely share files and folders with friends, family and  <br> colleagues for live collaboration.
+        No email attachments  <br> required.</p>
+      </div>
+
+      <div  class="flex justify-center items-center flex-col">
+        <img src="./images/icon-any-file.svg" alt="store-any-file" class="max-w-full w-auto">
+        <h2  class="text-white text-lg mb-2">Store any type of file</h2>
+        <p class="text-white text-center text-xs">Whether you're sharing holidays photos or work <br> documents, Fylo has you covered allowing for all
+        file <br> types to be securely stored and shared.</p>
+      </div>
+    
+     </div>
   
   <!--
 
@@ -53,23 +86,19 @@
 
   Access your files, anywhere
 
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
+  
 
-  Security you can trust
+  
 
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
+  
 
-  Real-time collaboration
+  
 
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
+  
 
-  Store any type of file
+  
 
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
+  
 
   Stay productive, wherever you are
 
