--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 
 
     <!-- Features section -->
-    <div class="mx-32 grid grid-cols-2 gap-8">
+    <div class="mx-32 grid grid-cols-2 gap-8 mb-16">
       <div class="flex justify-center items-center flex-col">
         <img src="./images/icon-access-anywhere.svg" alt="access-your-file-icon" class="max-w-full w-auto">
         <h2 class="text-white text-lg mb-2">Access your files , anywhere</h2>
@@ -75,6 +75,21 @@
       </div>
     
      </div>
+
+     <!-- Illustration section-->
+      <div class="mx-24 flex justify-center items-center gap-16">
+        <div>
+          <img src="./images/illustration-stay-productive.png" alt="stay-productive" class="max-w-full object-cover">
+        </div>
+        <div class="container">
+          <h2 class="text-white text-3xl mb-4">Stay productive, <br> wherever you are</h2>
+          <p class="text-white text-md">Never let location be an issue when accessing your files. Fylo has you covered for all of your file
+          storage needs.</p>
+          <p class="text-white">Securely share files and folders with friends, family and colleagues for live collaboration. No email
+          attachments required.</p>
+          <p class=" underline decoration-underlineColor "><a href="#" class="text-underlineColor flex">See how Fylo works<img src="./images/icon-arrow.svg" alt="arrow-icon" class="max-w-full object-cover self-center"></a></p>
+        </div>
+      </div>
   
   <!--
 
@@ -100,15 +115,13 @@
 
   
 
-  Stay productive, wherever you are
+  
 
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
+  
 
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
+  
 
-  See how Fylo works
+  
 
   Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
   become a well-oiled collaboration machine.
